<resources>
    <string name="app_name">To Do</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending_task">Pending Task</string>
    <string name="completed_task">Completed Task</string>
    <string name="create_task">Create Task</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="no_pending_task_to_do">Add new task</string>
</resources>