<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.todo.presentation.fragments.NewTaskFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.fragments.NewTaskFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/task_delete_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_delete"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{()->fragment.deleteCurrentTask()}"/>
        <TextView
            android:id="@+id/newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/create_task"
            android:textColor="@color/mainText"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/newTask">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginTop="10dp"
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingHorizontal="20dp"
                android:textColor="@color/mainText"
                android:background="@color/backgroundAd"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/hint_description"
                android:inputType="text"
                android:maxLines="3"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/dateAndTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/due_date"
                android:layout_marginTop="10dp"
                app:chipIcon="@drawable/ic_date_range" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/isCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/completed" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/ic_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="Add" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>