<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.example.todo.presentation.fragments.HomeFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pendingTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/pending_task"
                android:textAllCaps="true"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/mainText"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/emptyTaskLL"
                android:visibility="gone"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:scaleType="centerCrop"
                    android:id="@+id/animationViewPage"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_rawRes="@raw/empty" />

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_pending_task_to_do"
                    android:textColor="@color/textAd"
                    android:fontFamily="@font/metropolis_semibold"
                    android:textSize="25sp"
                    android:layout_marginHorizontal="8dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tasksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:paddingBottom="15dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/task_item"/>

            <TextView
                android:id="@+id/taskCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/completed_task"
                android:textAllCaps="true"
                android:fontFamily="@font/metropolis_regular"
                android:textColor="@color/mainText"
                android:textSize="24sp"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskCompletedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:paddingBottom="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/task_item"
                android:clipToPadding="false"
                android:visibility="gone"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_add"
            android:onClick="@{()->fragment.addTask()}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>